--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>welcome to my channel</h1>
+    <h2>Mama I can come</h2>
+    <p>more paragraph</p>
+    <p>I am coding and encoding</p>
 
 </body>
 
