--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Github Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -13,6 +14,7 @@
     <h2>Mama I can come</h2>
     <p>more paragraph</p>
     <p>I am coding and encoding</p>
+    <p>I have a dream to get</p>
 
 </body>
 
